--- a/shop.html
+++ b/shop.html
@@ -1,57 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Shop – Jerk Threads</title>
-    <style>
-        body {
-            background-color: #111;
-            color: white;
-            font-family: Arial;
-            text-align: center;
-        }
-        .shirt-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-        }
-        .shirt {
-            background: #222;
-            padding: 10px;
-            border-radius: 8px;
-            width: 200px;
-        }
-        .shirt img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        .shirt-title {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Shop – Jerk Threads</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Shop Our Shirts</h1>
-    <div class="shirt-grid">
-        <div class="shirt">
-            <img src="moon_coming_soon.png" alt="Moon Coming Soon">
-            <div class="shirt-title">Moon Coming Soon</div>
-        </div>
-        <div class="shirt">
-            <img src="keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
-            <div class="shirt-title">Keep Calm HODL XRP</div>
-        </div>
-        <div class="shirt">
-            <img src="certified_jerk.png" alt="Certified Jerk">
-            <div class="shirt-title">Certified Jerk</div>
-        </div>
-        <div class="shirt">
-            <img src="decentralize_everything.png" alt="Decentralize Everything">
-            <div class="shirt-title">Decentralize Everything</div>
-        </div>
+  <nav>
+    <a href="index.html" class="back">← Back to Home</a>
+  </nav>
+
+  <h1 class="title">Shop Our Shirts</h1>
+
+  <div class="grid">
+    <div class="card">
+      <img src="moon_coming_soon.png" alt="Moon Coming Soon">
+      <h2>Moon Coming Soon</h2>
     </div>
+
+    <div class="card">
+      <img src="keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
+      <h2>Keep Calm HODL XRP</h2>
+    </div>
+
+    <div class="card">
+      <img src="certified_jerk.png" alt="Certified Jerk">
+      <h2>Certified Jerk</h2>
+    </div>
+
+    <div class="card">
+      <img src="decentralize_everything.png" alt="Decentralize Everything">
+      <h2>Decentralize Everything</h2>
+    </div>
+  </div>
 </body>
 </html>
