--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Jerk Threads | Crypto Streetwear</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <header>
-    <img src="jerkthreads_homepage.JPG" alt="Jerk Threads Homepage" class="hero">
-    <a href="shop.html" class="cta">Shop Now</a>
+    <div class="logo">Jerk Threads</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
+    </nav>
   </header>
+
+  <section class="hero">
+    <h1>Wear Your Crypto Conviction</h1>
+    <p>Limited‑edition tees for true degens.</p>
+    <a href="shop.html" class="btn-primary">Shop Now</a>
+  </section>
+
+  <footer>
+    <div>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></div>
+    <div>Payments Accepted: PayPal · Visa · MasterCard · Crypto</div>
+    <div class="copyright">© 2025 Jerk Threads. All rights reserved.</div>
+  </footer>
 </body>
 </html>
