--- a/shop.html
+++ b/shop.html
@@ -2,36 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shop – Jerk Threads</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Shop | Jerk Threads</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <nav>
-    <a href="index.html" class="back">← Back to Home</a>
-  </nav>
+  <header>
+    <div class="logo">Jerk Threads</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html" class="active">Shop</a>
+    </nav>
+  </header>
 
-  <h1 class="title">Shop Our Shirts</h1>
+  <section class="catalog">
+    <h2>Shop Our Shirts</h2>
+    <div class="grid">
+      <div class="item">
+        <img src="assets/images/moon_coming_soon.png" alt="Moon Coming Soon">
+        <h3>Moon Coming Soon</h3>
+        <p class="price">$24.99</p>
+        <a href="mailto:jerkthreads@gmail.com?subject=Moon%20Coming%20Soon%20Tee%20Order" class="btn-secondary">Buy</a>
+      </div>
 
-  <div class="grid">
-    <div class="card">
-      <img src="moon_coming_soon.png" alt="Moon Coming Soon">
-      <h2>Moon Coming Soon</h2>
+      <div class="item">
+        <img src="assets/images/keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
+        <h3>Keep Calm HODL XRP</h3>
+        <p class="price">$24.99</p>
+        <a href="mailto:jerkthreads@gmail.com?subject=Keep%20Calm%20HODL%20XRP%20Tee%20Order" class="btn-secondary">Buy</a>
+      </div>
+
+      <div class="item">
+        <img src="assets/images/certified_jerk.png" alt="Certified Jerk">
+        <h3>Certified Jerk</h3>
+        <p class="price">$24.99</p>
+        <a href="mailto:jerkthreads@gmail.com?subject=Certified%20Jerk%20Tee%20Order" class="btn-secondary">Buy</a>
+      </div>
+
+      <div class="item">
+        <img src="assets/images/decentralize_everything.png" alt="Decentralize Everything">
+        <h3>Decentralize Everything</h3>
+        <p class="price">$24.99</p>
+        <a href="mailto:jerkthreads@gmail.com?subject=Decentralize%20Everything%20Tee%20Order" class="btn-secondary">Buy</a>
+      </div>
     </div>
+  </section>
 
-    <div class="card">
-      <img src="keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
-      <h2>Keep Calm HODL XRP</h2>
-    </div>
-
-    <div class="card">
-      <img src="certified_jerk.png" alt="Certified Jerk">
-      <h2>Certified Jerk</h2>
-    </div>
-
-    <div class="card">
-      <img src="decentralize_everything.png" alt="Decentralize Everything">
-      <h2>Decentralize Everything</h2>
-    </div>
-  </div>
+  <footer>
+    <div>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></div>
+    <div>Payments Accepted: PayPal · Visa · MasterCard · Crypto</div>
+    <div class="copyright">© 2025 Jerk Threads. All rights reserved.</div>
+  </footer>
 </body>
 </html>
