--- a/index.html
+++ b/index.html
@@ -2,52 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Jerk Threads</title>
+  <title>Jerk Threads | Crypto Streetwear</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <header>
-    <img src="images/hero.png" alt="Jerk Threads Promo">
-    <div class="cta">
-      <a href="#shop" class="btn">SHOP NOW</a>
-    </div>
+    <div class="logo">Jerk Threads</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
+    </nav>
   </header>
 
-  <section id="shop" class="products">
-    <div class="card">
-      <img src="images/moon-coming-soon.png" alt="Moon Coming Soon Shirt">
-      <h3>Moon Coming Soon</h3>
-      <p>$27.99</p>
-      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Moon%20Coming%20Soon%20Order">Buy</a>
-    </div>
-
-    <div class="card">
-      <img src="images/keep-calm-hodl-xrp.png" alt="Keep Calm HODL XRP Shirt">
-      <h3>Keep Calm HODL XRP</h3>
-      <p>$24.99</p>
-      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Keep%20Calm%20HODL%20XRP%20Order">Buy</a>
-    </div>
-
-    <div class="card">
-      <img src="images/iso-gang.png" alt="ISO Gang Shirt">
-      <h3>ISO Gang</h3>
-      <p>$24.99</p>
-      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=ISO%20Gang%20Order">Buy</a>
-    </div>
-
-    <div class="card">
-      <img src="images/certified-jerk.png" alt="Certified Jerk Shirt">
-      <h3>Certified Jerk</h3>
-      <p>$29.99</p>
-      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Certified%20Jerk%20Order">Buy</a>
-    </div>
+  <section class="hero">
+    <h1>Wear Your Crypto Conviction</h1>
+    <p>Limited‑edition tees for true degens.</p>
+    <a href="shop.html" class="btn-primary">Shop Now</a>
   </section>
 
   <footer>
-    <p>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></p>
-    <p>Follow: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
-    <p>Payments accepted via PayPal and Crypto</p>
+    <div>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></div>
+    <div>Payments Accepted: PayPal · Visa · MasterCard · Crypto</div>
+    <div class="copyright">© 2025 Jerk Threads. All rights reserved.</div>
   </footer>
 </body>
 </html>
