--- a/shop.html
+++ b/shop.html
@@ -1,58 +1,53 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shop | Jerk Threads</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shop - Jerk Threads</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <div class="logo">Jerk Threads</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="shop.html" class="active">Shop</a>
-    </nav>
-  </header>
-
-  <section class="catalog">
-    <h2>Shop Our Shirts</h2>
-    <div class="grid">
-      <div class="item">
-        <img src="assets/images/moon_coming_soon.png" alt="Moon Coming Soon">
+  <section class="products">
+    <div class="card">
+      <img src="images/moon-coming-soon.png" alt="Moon Coming Soon" />
+      <div class="card-content">
         <h3>Moon Coming Soon</h3>
-        <p class="price">$24.99</p>
-        <a href="mailto:jerkthreads@gmail.com?subject=Moon%20Coming%20Soon%20Tee%20Order" class="btn-secondary">Buy</a>
+        <p class="price">$25.00</p>
       </div>
-
-      <div class="item">
-        <img src="assets/images/keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
-        <h3>Keep Calm HODL XRP</h3>
-        <p class="price">$24.99</p>
-        <a href="mailto:jerkthreads@gmail.com?subject=Keep%20Calm%20HODL%20XRP%20Tee%20Order" class="btn-secondary">Buy</a>
+    </div>
+    <div class="card">
+      <img src="images/keep-calm-hodl-xrp.png" alt="Keep Calm HODL XRP" />
+      <div class="card-content">
+        <h3>Keep Calm HODL XRP</h3>
+        <p class="price">$25.00</p>
       </div>
-
-      <div class="item">
-        <img src="assets/images/certified_jerk.png" alt="Certified Jerk">
+    </div>
+    <div class="card">
+      <img src="images/certified-jerk.png" alt="Certified Jerk" />
+      <div class="card-content">
         <h3>Certified Jerk</h3>
-        <p class="price">$24.99</p>
-        <a href="mailto:jerkthreads@gmail.com?subject=Certified%20Jerk%20Tee%20Order" class="btn-secondary">Buy</a>
+        <p class="price">$25.00</p>
       </div>
-
-      <div class="item">
-        <img src="assets/images/decentralize_everything.png" alt="Decentralize Everything">
-        <h3>Decentralize Everything</h3>
-        <p class="price">$24.99</p>
-        <a href="mailto:jerkthreads@gmail.com?subject=Decentralize%20Everything%20Tee%20Order" class="btn-secondary">Buy</a>
+    </div>
+    <div class="card">
+      <img src="images/iso-gang.png" alt="ISO Gang" />
+      <div class="card-content">
+        <h3>ISO Gang</h3>
+        <p class="price">$25.00</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/decentralize-everything.png" alt="Decentralize Everything" />
+      <div class="card-content">
+        <h3>Decentralize Everything</h3>
+        <p class="price">$25.00</p>
       </div>
     </div>
   </section>
-
   <footer>
-    <div>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></div>
-    <div>Payments Accepted: PayPal · Visa · MasterCard · Crypto</div>
-    <div class="copyright">© 2025 Jerk Threads. All rights reserved.</div>
+    Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a><br/>
+    Payments accepted: PayPal, Visa, MasterCard
   </footer>
 </body>
 </html>
