shop now on left
push to main

--- a/shop.html
+++ b/shop.html
@@ -2,48 +2,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Shop - Jerk Threads</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="products">
-    <div class="card">
-      <img src="images/moon-coming-soon.png" alt="Moon Coming Soon" />
-      <div class="card-content">
-        <h3>Moon Coming Soon</h3>
-        <p class="price">$25.00</p>
+  <div class="shop-section">
+    <a href="index.html" class="back-link">&larr; Return to Home</a>
+    <h1>Our Shirts</h1>
+    <div class="shirt-grid">
+      <div class="shirt-card">
+        <img src="images/moon_coming_soon.png" alt="Moon Coming Soon">
+        <p>Moon Coming Soon – $29.99</p>
+      </div>
+      <div class="shirt-card">
+        <img src="images/keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP">
+        <p>Keep Calm HODL XRP – $29.99</p>
+      </div>
+      <div class="shirt-card">
+        <img src="images/certified_jerk.png" alt="Certified Jerk">
+        <p>Certified Jerk – $29.99</p>
+      </div>
+      <div class="shirt-card">
+        <img src="images/decentralize_everything.png" alt="Decentralize Everything">
+        <p>Decentralize Everything – $29.99</p>
+      </div>
+      <div class="shirt-card">
+        <img src="images/iso-gang.png" alt="ISO Gang">
+        <p>ISO Gang – $29.99</p>
       </div>
     </div>
-    <div class="card">
-      <img src="images/keep-calm-hodl-xrp.png" alt="Keep Calm HODL XRP" />
-      <div class="card-content">
-        <h3>Keep Calm HODL XRP</h3>
-        <p class="price">$25.00</p>
-      </div>
+    <div class="contact-info" style="margin-top:40px;">
+      <p>Contact: jerkthreads@gmail.com</p>
+      <p>Follow: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+      <p>Payments accepted: PayPal · Visa · MasterCard</p>
     </div>
-    <div class="card">
-      <img src="images/certified-jerk.png" alt="Certified Jerk" />
-      <div class="card-content">
-        <h3>Certified Jerk</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/iso-gang.png" alt="ISO Gang" />
-      <div class="card-content">
-        <h3>ISO Gang</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/decentralize-everything.png" alt="Decentralize Everything" />
-      <div class="card-content">
-        <h3>Decentralize Everything</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-  </section>
+  </div>
 </body>
 </html>
