--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=1366, height=768, initial-scale=1.0"/>
   <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="hero-section">
-    <img src="images/hero.png" alt="Jerk Threads Banner">
-    <a href="shop.html" class="shop-btn">Shop Now</a>
-    <div class="contact-info">
-      <p>Contact: jerkthreads@gmail.com</p>
-      <p>Follow: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
-      <p>Payments accepted: PayPal · Visa · MasterCard</p>
+  <header>
+    <img src="images/hero.png" alt="Jerk Threads Hero" />
+    <div class="cta">
+      <a href="shop.html" class="btn">Shop Now</a>
     </div>
-  </div>
+  </header>
 </body>
 </html>
