--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=1366, height=768, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="images/hero.png" alt="Jerk Threads Hero" />
+    <img src="images/hero.png" alt="Jerk Threads Promo">
     <div class="cta">
-      <a href="shop.html" class="btn">Shop Now</a>
+      <a href="#shop" class="btn">SHOP NOW</a>
     </div>
   </header>
+
+  <section id="shop" class="products">
+    <div class="card">
+      <img src="images/moon-coming-soon.png" alt="Moon Coming Soon Shirt">
+      <h3>Moon Coming Soon</h3>
+      <p>$27.99</p>
+      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Moon%20Coming%20Soon%20Order">Buy</a>
+    </div>
+
+    <div class="card">
+      <img src="images/keep-calm-hodl-xrp.png" alt="Keep Calm HODL XRP Shirt">
+      <h3>Keep Calm HODL XRP</h3>
+      <p>$24.99</p>
+      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Keep%20Calm%20HODL%20XRP%20Order">Buy</a>
+    </div>
+
+    <div class="card">
+      <img src="images/iso-gang.png" alt="ISO Gang Shirt">
+      <h3>ISO Gang</h3>
+      <p>$24.99</p>
+      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=ISO%20Gang%20Order">Buy</a>
+    </div>
+
+    <div class="card">
+      <img src="images/certified-jerk.png" alt="Certified Jerk Shirt">
+      <h3>Certified Jerk</h3>
+      <p>$29.99</p>
+      <a class="btn" href="mailto:jerkthreads@gmail.com?subject=Certified%20Jerk%20Order">Buy</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></p>
+    <p>Follow: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+    <p>Payments accepted via PayPal and Crypto</p>
+  </footer>
 </body>
 </html>
