--- a/shop.html
+++ b/shop.html
@@ -1,53 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Shop - Jerk Threads</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <section class="products">
-    <div class="card">
-      <img src="images/moon-coming-soon.png" alt="Moon Coming Soon" />
-      <div class="card-content">
-        <h3>Moon Coming Soon</h3>
-        <p class="price">$25.00</p>
+  <div class="shop-container">
+    <h1>Shop Our Shirts</h1>
+    <div class="shirts-grid">
+      <div class="shirt-item">
+        <img src="moon_coming_soon.png" alt="Moon Coming Soon" />
+        <p>$25 – Moon Coming Soon</p>
+      </div>
+      <div class="shirt-item">
+        <img src="keep_calm_hodl_xrp.png" alt="Keep Calm HODL XRP" />
+        <p>$25 – Keep Calm HODL XRP</p>
+      </div>
+      <div class="shirt-item">
+        <img src="certified_jerk.png" alt="Certified Jerk" />
+        <p>$25 – Certified Jerk</p>
+      </div>
+      <div class="shirt-item">
+        <img src="decentralize_everything.png" alt="Decentralize Everything" />
+        <p>$25 – Decentralize Everything</p>
+      </div>
+      <div class="shirt-item">
+        <img src="iso_gang.png" alt="ISO Gang" />
+        <p>$25 – ISO Gang</p>
       </div>
     </div>
-    <div class="card">
-      <img src="images/keep-calm-hodl-xrp.png" alt="Keep Calm HODL XRP" />
-      <div class="card-content">
-        <h3>Keep Calm HODL XRP</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/certified-jerk.png" alt="Certified Jerk" />
-      <div class="card-content">
-        <h3>Certified Jerk</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/iso-gang.png" alt="ISO Gang" />
-      <div class="card-content">
-        <h3>ISO Gang</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/decentralize-everything.png" alt="Decentralize Everything" />
-      <div class="card-content">
-        <h3>Decentralize Everything</h3>
-        <p class="price">$25.00</p>
-      </div>
-    </div>
-  </section>
-  <footer>
-    Contact: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a><br/>
-    Payments accepted: PayPal, Visa, MasterCard
-  </footer>
+  </div>
 </body>
 </html>
