--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerk Threads</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero-container">
-    <img src="hero.png" class="hero-image" alt="Hero Image"/>
-    <a href="shop.html" class="shop-now-btn">Shop Now</a>
-  </div>
+    <div class="hero">
+        <img src="assets/hero.png" alt="Hero Banner" class="hero-image">
+        <a href="shop.html" class="shop-button">Shop Now</a>
+    </div>
 </body>
 </html>
