--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerk Threads</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jerk Threads</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hero">
-        <img src="assets/hero.png" alt="Hero Banner" class="hero-image">
-        <a href="shop.html" class="shop-button">Shop Now</a>
-    </div>
+  <header class="hero">
+    <img src="assets/hero.png" alt="Hero">
+    <a href="shop.html" class="btn shop-now">Shop Now</a>
+  </header>
+  <footer>
+    <a href="https://instagram.com/jerkthreads" class="ig-link" target="_blank">@jerkthreads</a>
+  </footer>
 </body>
 </html>
