--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="hero">
-    <img src="assets/hero.png" alt="Hero">
-    <a href="shop.html" class="btn shop-now">Shop Now</a>
+    <img src="assets/hero.png" alt="Hero Image" class="hero-img">
+    <a href="shop.html" class="shop-btn">Shop Now</a>
   </header>
-  <footer>
-    <a href="https://instagram.com/jerkthreads" class="ig-link" target="_blank">@jerkthreads</a>
-  </footer>
 </body>
 </html>
