--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jerk Threads</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero">
-    <img src="assets/hero.png" alt="Hero Image" class="hero-img">
-    <a href="shop.html" class="shop-btn">Shop Now</a>
-  </header>
+<header class="hero">
+  <img src="assets/hero.png" alt="Hero" class="hero-img">
+  <a href="shop.html" class="shop-btn">Shop Now</a>
+</header>
 </body>
 </html>
