--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="hero">
-    <img src="assets/hero.png" alt="Hero" class="hero-img">
-    <a href="shop.html" class="shop-button">Shop Now</a>
-  </section>
+  <header class="hero">
+    <img src="assets/hero.png" alt="Hero">
+    <a href="shop.html" class="btn shop-now">Shop Now</a>
+  </header>
+  <footer>
+    <a href="https://instagram.com/jerkthreads" class="ig-link" target="_blank">@jerkthreads</a>
+  </footer>
 </body>
 </html>
