--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jerk Threads</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="hero">
+    <img src="hero_image.jpg" alt="Hero Image" class="hero-img"/>
+  </div>
 
-<html lang="en"><head>
-<meta charset="utf-8"/><meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Custom Threads</title>
-<link href="style.css" rel="stylesheet"/>
-</head><body>
-<header class="hero">
-<img alt="Hero image" class="hero-img" src="assets/hero.png"/>
-<a class="shop-btn" href="shop.html">SHOP NOW</a>
-</header>
-
-<footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:40px;">
-<p style="margin:0;">Custom Threads</p>
-<p style="margin:5px 0;">
-<a href="https://instagram.com/jerkthreads" style="color:#FFD700;" target="_blank">@jerkthreads</a> |
-    <a href="mailto:jerkthreads@gmail.com" style="color:#FFD700;">jerkthreads@gmail.com</a>
-</p>
-</footer>
-</body></html>
+  <footer class="footer">
+    <p>&copy; 2025 Jerk Threads</p>
+    <a href="about.html">About Us</a> |
+    <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
+    <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
+  </footer>
+</body>
+</html>
