--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jerk Threads</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jerk Threads</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="hero">
-    <img src="hero_image.jpg" alt="Hero Image" class="hero-img"/>
-  </div>
-
-  <footer class="footer">
-    <p>&copy; 2025 Jerk Threads</p>
-    <a href="about.html">About Us</a> |
-    <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
-    <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
-  </footer>
+<body class="home">
+<header class="hero">
+  <img src="assets/hero.png" alt="Hero" class="hero-img">
+  <a href="shop.html" class="shop-btn">SHOP NOW</a>
+</header>
+<footer class="footer">
+  &copy; 2025 Jerk Threads |
+  <a href="about.html">About&nbsp;Us</a> |
+  <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
+  <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
+</footer>
 </body>
 </html>
