--- a/about.html
+++ b/about.html
@@ -2,35 +2,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Us – Jerk Threads</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us - Jerk Threads</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #1e1e1e;
+      color: #fefefe;
+      background-image: url('A_digital_illustration_in_vintage-inspired_style_f.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 4rem;
+      min-height: 100vh;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      background-color: rgba(20, 20, 20, 0.85);
+      padding: 2rem 3rem;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    }
+    h1 {
+      text-align: center;
+      font-size: 3rem;
+      color: #ffd700;
+    }
+    p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
+    footer {
+      text-align: center;
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+    a {
+      color: #ffd700;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body class="about">
-<nav class="top-nav"><a href="index.html">← Home</a></nav>
-<section class="about-section">
-  <h1>About Us – Jerk Threads</h1>
-  <p><strong>Built with love. Stitched with purpose.</strong></p>
-  <p>Welcome to <strong>Jerk Threads</strong>, the bold, unapologetic brand created by a real couple—with a twist.<br>
-  <em>She is the beauty. I am the beast.</em> Together, we’re building something loud, loyal, and legendary.</p>
-  <p>What started as jerky turned into shirts, but the spirit stayed the same: <strong>Raw. Real. Unfiltered.</strong></p>
-  <h2>Our Story</h2>
-  <p>She brings the grace. I bring the grit.<br>
-  She brings the heart. I bring the hustle.<br>
-  Every shirt we drop is made with both—because this brand is more than fabric. It’s <strong>family</strong>.</p>
-  <h2>Mission Statement</h2>
-  <blockquote>
-    To wear what matters, print what’s real, and honor love, loyalty, and the power of believing in your own story.<br>
-    <strong>Jerk Threads</strong> exists for the rebels, the hodlers, and the believers who refuse to blend in.
-  </blockquote>
-  <h2>Our Promise</h2>
-  <p><strong>If you can dream it, I can make it.<br>Your wish is my command, deary.</strong></p>
-</section>
-<footer class="footer">
-  &copy; 2025 Jerk Threads |
-  <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
-  <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
-</footer>
+<body>
+  <div class="overlay">
+    <div class="container">
+      <h1>About Us</h1>
+      <p>
+        Welcome to <strong>Jerk Threads</strong> — where boldness meets heart.
+      </p>
+      <p>
+        This brand was built by two souls on a mission. She is the beauty — full of grace, creativity, and the light behind our vision. I am the beast — the Jerk with fire, drive, and a heart loyal to the core. Together, we are unstoppable.
+      </p>
+      <p>
+        We believe in love, family, loyalty, and the power of creating something that matters. Every shirt we make tells a story — yours, ours, or the one you're about to write.
+      </p>
+      <p>
+        Our journey isn't just about fashion. It's about making dreams real, turning passion into product, and giving every customer a piece of our hearts stitched into fabric.
+      </p>
+      <p>
+        Thank you for supporting <strong>Jerk Threads</strong>. Your loyalty fuels our mission.
+      </p>
+      <footer>
+        <p><a href="index.html">Back to Home</a> | Contact us: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a> | Follow us on <a href="https://instagram.com/jerkthreads" target="_blank">Instagram</a></p>
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
