--- a/index.html
+++ b/index.html
@@ -1,22 +1,74 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jerk Threads</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jerk Threads</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: white;
+    }
+    header {
+      background-color: #222;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.2em;
+      color: #ccc;
+    }
+    .hero {
+      width: 100%;
+      max-height: 100vh;
+      overflow: hidden;
+    }
+    .hero img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+    }
+    footer a {
+      color: #ffcc00;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body class="home">
-<header class="hero">
-  <img src="assets/hero.png" alt="Hero" class="hero-img">
-  <a href="shop.html" class="shop-btn">SHOP NOW</a>
-</header>
-<footer class="footer">
-  &copy; 2025 Jerk Threads |
-  <a href="about.html">About&nbsp;Us</a> |
-  <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
-  <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
-</footer>
+<body>
+  <header>
+    <h1>Jerk Threads</h1>
+    <p>Get Custom Threads</p>
+  </header>
+  <div class="hero">
+    <img src="main_page_hero.png" alt="Jerk Threads Hero Image">
+  </div>
+  <footer>
+    <p>
+      <a href="#">About Us</a> |
+      <a href="https://www.instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
+      <a href="mailto:jerkthreads@gmail.com">Contact Us</a> |
+      <a href="#shop">Shop Now</a>
+    </p>
+  </footer>
 </body>
 </html>
