--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,70 +6,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jerk Threads</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: white;
+      background-color: #000;
+      color: #fff;
     }
-    header {
-      background-color: #222;
-      padding: 20px;
+    header, footer {
+      background-color: #111;
+      color: #fff;
+      padding: 15px;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5em;
-    }
-    header p {
-      font-size: 1.2em;
-      color: #ccc;
+    header {
+      font-size: 1.8em;
+      font-weight: bold;
     }
     .hero {
-      width: 100%;
-      max-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 600px;
       overflow: hidden;
     }
     .hero img {
-      width: 100%;
+      width: 1140px;
       height: auto;
-      display: block;
-    }
-    footer {
-      background-color: #222;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
+      max-height: 600px;
+      object-fit: contain;
     }
     footer a {
-      color: #ffcc00;
-      text-decoration: none;
+      color: #00aced;
       margin: 0 10px;
+      text-decoration: none;
     }
-    footer a:hover {
-      text-decoration: underline;
+    .shop-now {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: #ffcc00;
+      color: #000;
+      padding: 10px 15px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Jerk Threads</h1>
-    <p>Get Custom Threads</p>
+    Jerk Threads – Get Custom Threads
+    <a href="shop.html" class="shop-now">Shop Now</a>
   </header>
   <div class="hero">
-    <img src="main_page_hero.png" alt="Jerk Threads Hero Image">
+    <img src="homepage_image.jpg" alt="Jerk Threads Hero" />
   </div>
   <footer>
-    <p>
-      <a href="#">About Us</a> |
-      <a href="https://www.instagram.com/jerkthreads" target="_blank">@jerkthreads</a> |
-      <a href="mailto:jerkthreads@gmail.com">Contact Us</a> |
-      <a href="#shop">Shop Now</a>
-    </p>
+    <a href="about.html">About Us</a>
+    <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a>
+    <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
   </footer>
 </body>
 </html>
