--- a/index.html
+++ b/index.html
@@ -2,69 +2,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jerk Threads</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-    header, footer {
-      background-color: #111;
-      color: #fff;
-      padding: 15px;
-      text-align: center;
-    }
-    header {
-      font-size: 1.8em;
-      font-weight: bold;
-    }
-    .hero {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 600px;
-      overflow: hidden;
-    }
-    .hero img {
-      width: 1140px;
-      height: auto;
-      max-height: 600px;
-      object-fit: contain;
-    }
-    footer a {
-      color: #00aced;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    .shop-now {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background-color: #ffcc00;
-      color: #000;
-      padding: 10px 15px;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerk Threads – Get Custom Threads</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+        }
+        .hero {
+            width: 100%;
+            max-width: 1140px;
+            margin: 0 auto;
+        }
+        .hero img {
+            width: 100%;
+            height: auto;
+        }
+        footer {
+            background-color: #111;
+            color: #ccc;
+            padding: 20px 0;
+            font-size: 14px;
+        }
+        footer a {
+            color: #fcd34d;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    Jerk Threads – Get Custom Threads
-    <a href="shop.html" class="shop-now">Shop Now</a>
-  </header>
-  <div class="hero">
-    <img src="homepage_image.jpg" alt="Jerk Threads Hero" />
-  </div>
-  <footer>
-    <a href="about.html">About Us</a>
-    <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a>
-    <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
-  </footer>
+    <div class="hero">
+        <img src="home-image.png" alt="Hero Image">
+    </div>
+    <footer>
+        <p>Contact us: 
+            <a href="https://twitter.com/jerkthreads" target="_blank">@jerkthreads (X)</a> | 
+            <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads (IG)</a> | 
+            <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
+        </p>
+    </footer>
 </body>
 </html>
