--- a/about.html
+++ b/about.html
@@ -1,78 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Jerk Threads</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1e1e1e;
-      color: #fefefe;
-      background-image: url('A_digital_illustration_in_vintage-inspired_style_f.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.75);
-      padding: 4rem;
-      min-height: 100vh;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background-color: rgba(20, 20, 20, 0.85);
-      padding: 2rem 3rem;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
-    }
-    h1 {
-      text-align: center;
-      font-size: 3rem;
-      color: #ffd700;
-    }
-    p {
-      font-size: 1.2rem;
-      line-height: 1.8;
-    }
-    footer {
-      text-align: center;
-      margin-top: 4rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-    a {
-      color: #ffd700;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="overlay">
-    <div class="container">
-      <h1>About Us</h1>
-      <p>
-        Welcome to <strong>Jerk Threads</strong> — where boldness meets heart.
-      </p>
-      <p>
-        This brand was built by two souls on a mission. She is the beauty — full of grace, creativity, and the light behind our vision. I am the beast — the Jerk with fire, drive, and a heart loyal to the core. Together, we are unstoppable.
-      </p>
-      <p>
-        We believe in love, family, loyalty, and the power of creating something that matters. Every shirt we make tells a story — yours, ours, or the one you're about to write.
-      </p>
-      <p>
-        Our journey isn't just about fashion. It's about making dreams real, turning passion into product, and giving every customer a piece of our hearts stitched into fabric.
-      </p>
-      <p>
-        Thank you for supporting <strong>Jerk Threads</strong>. Your loyalty fuels our mission.
-      </p>
-      <footer>
-        <p><a href="index.html">Back to Home</a> | Contact us: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a> | Follow us on <a href="https://instagram.com/jerkthreads" target="_blank">Instagram</a></p>
-      </footer>
-    </div>
-  </div>
-</body>
-</html>
+<html><head><title>About Us</title></head><body><h1>About Jerk Threads</h1><p>We are the Beauty and the Beast. She is the Beauty. I am the Beast. Together, we create custom magic for every dreamer.</p></body></html>
