full site work over
push to main

--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerk Threads – Get Custom Threads</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #000;
-            color: white;
-        }
-        .hero {
-            background: url('homepage.png') no-repeat center center;
-            background-size: cover;
-            width: 100%;
-            height: 600px;
-        }
-        footer {
-            background-color: #111;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        footer a {
-            color: #ffcc00;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="hero"></div>
-    <footer>
-        <a href="about.html">About Us</a>
-        <a href="shop.html">Shop Now</a>
-        <a href="mailto:jerkthreads@gmail.com">Contact Us</a>
-        <div style="margin-top: 10px;">
-            <span>@jerkthreads on X & IG</span>
-        </div>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Jerk Threads</title><link rel='stylesheet' href='style.css'></head><body><img src='assets/homepage.png' alt='Homepage Art'><footer><a href='about.html'>About Us</a> | <a href='shop.html'>Shop</a> | <a href='custom.html'>Custom Orders</a> | <a href='contact.html'>Contact Us</a><br>@jerkthreads on X and IG | jerkthreads@gmail.com</footer></body></html>
