--- a/about.html
+++ b/about.html
@@ -1,1 +1,1 @@
-<html><head><title>About Us</title></head><body><h1>About Jerk Threads</h1><p>We are the Beauty and the Beast. She is the Beauty. I am the Beast. Together, we create custom magic for every dreamer.</p></body></html>
+<!DOCTYPE html><html><head><title>About Us</title><link rel='stylesheet' href='style.css'></head><body><img src='assets/about.png' alt='About Us'><section><h1>About Us – Jerk Threads</h1><p>Built with love. Stitched with purpose...</p></section><footer><a href='index.html'>Home</a></footer></body></html>
