--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,1 @@
-<html><head><title>Shop Now</title></head><body><h1>Shop Custom Shirts & More</h1><p>Browse our collection and request your custom design today!</p></body></html>
+<!DOCTYPE html><html><head><title>Shop</title><link rel='stylesheet' href='style.css'></head><body><img src='assets/shop.png' alt='Shop Banner'><section class='grid'><div class='item'>Shirt 1</div><div class='item'>Shirt 2</div><div class='item'>Shirt 3</div></section><footer><a href='index.html'>Home</a></footer></body></html>
