--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<!DOCTYPE html><html><head><title>Jerk Threads</title><link rel='stylesheet' href='style.css'></head><body><img src='assets/homepage.png' alt='Homepage Art'><footer><a href='about.html'>About Us</a> | <a href='shop.html'>Shop</a> | <a href='custom.html'>Custom Orders</a> | <a href='contact.html'>Contact Us</a><br>@jerkthreads on X and IG | jerkthreads@gmail.com</footer></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerk Threads – Get Custom Threads</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #000;
+            color: #fff;
+            text-align: center;
+        }
+        .hero {
+            width: 100%;
+            max-width: 1140px;
+            margin: 0 auto;
+        }
+        .hero img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+        footer {
+            background: #111;
+            padding: 20px;
+            color: #ccc;
+            font-size: 14px;
+        }
+        footer a {
+            color: #ccc;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="hero">
+        <img src="assets/homepage_hero.jpg" alt="Jerk Threads Homepage">
+    </div>
+    <footer>
+        <a href="#">About Us</a> |
+        <a href="#">Shop Now</a> |
+        <a href="#">Contact Us</a><br><br>
+        @jerkthreads on X & IG – jerkthreads@gmail.com
+    </footer>
+</body>
+</html>
