--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,39 @@
-<!DOCTYPE html><html><head><title>Contact</title><link rel='stylesheet' href='style.css'></head><body><img src='assets/contact.png' alt='Contact Art'><footer><a href='index.html'>Home</a></footer></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+</head>
+<body style="margin: 0; font-family: Arial, sans-serif; background-color: #111; color: white;">
+  
+<nav style="display: flex; justify-content: space-around; background-color: #000; padding: 10px;">
+  <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+  <a href="shop.html" style="color: white; text-decoration: none;">Shop</a>
+  <a href="custom.html" style="color: white; text-decoration: none;">Custom Orders</a>
+  <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
+  <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
+</nav>
+
+  <main style="padding: 20px;">
+    
+    <h1>📬 Contact Us</h1>
+    <p>Email us at: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a></p>
+    <p>Follow us:</p>
+    <ul>
+      <li>Instagram: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a></li>
+      <li>X (Twitter): <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a></li>
+    </ul>
+    <img src="contact-image.png" alt="Contact Us Image" style="width: 100%; max-width: 800px; display: block; margin: 20px auto;">
+    
+  </main>
+  
+<footer style="text-align: center; padding: 20px; background-color: #000; color: white;">
+  Contact us: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a><br>
+  IG: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a> | 
+  X: <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a>
+</footer>
+
+</body>
+</html>
