--- a/about.html
+++ b/about.html
@@ -1,90 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us – Jerk Threads</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: #1a1a1a;
-      color: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    header, footer {
-      width: 100%;
-      background-color: #000;
-      padding: 10px 0;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.5em;
-      color: #f4f4f4;
-    }
-    footer a {
-      color: #f4f4f4;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    .content {
-      max-width: 900px;
-      padding: 20px;
-    }
-    img {
-      width: 100%;
-      max-width: 800px;
-      height: auto;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-    h2 {
-      color: #f9b233;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>About Us – Jerk Threads</h1>
-  </header>
-
-  <div class="content">
-    <img src="about_us_image.png" alt="About Us Art" />
-    <h2>🛠️ Built with love. Stitched with purpose.</h2>
-    <p>
-      Welcome to Jerk Threads, the bold, unapologetic brand created by a real couple—with a twist.<br>
-      She is the beauty. I am the beast. Together, we’re building something loud, loyal, and legendary.
-    </p>
-
-    <h2>👑 Our Story</h2>
-    <p>
-      She brings the grace. I bring the grit.<br>
-      She brings the heart. I bring the hustle.<br>
-      Every shirt we drop is made with both—because this brand is more than fabric. It’s family.
-    </p>
-
-    <h2>❤️ Our Mission Statement</h2>
-    <p>
-      To wear what matters, print what’s real, and honor love, loyalty, and the power of believing in your own story.<br>
-      Jerk Threads exists for the rebels, the hodlers, and the believers who refuse to blend in.
-    </p>
-
-    <h2>✨ Our Promise</h2>
-    <p>
-      If you can dream it, I can make it.<br>
-      Your wish is my command, deary.
-    </p>
-  </div>
-
-  <footer>
-    <a href="index.html">Home</a> |
-    <a href="contact.html">Contact Us</a> |
-    <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a> |
-    <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>About Us</title></head><body><h1>About Us</h1></body></html>
