--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><title>Contact</title></head><body><h1>Contact Us</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Us - Jerk Threads</title></head>
+<body>
+<h1>Contact Us</h1>
+<p>X: <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+<p>Instagram: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+<p>Email: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></p>
+<p><a href="index.html">Return to Home</a></p>
+</body>
+</html>
