--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
-</head>
-<body style="margin: 0; font-family: Arial, sans-serif; background-color: #111; color: white;">
-  
-<nav style="display: flex; justify-content: space-around; background-color: #000; padding: 10px;">
-  <a href="index.html" style="color: white; text-decoration: none;">Home</a>
-  <a href="shop.html" style="color: white; text-decoration: none;">Shop</a>
-  <a href="custom.html" style="color: white; text-decoration: none;">Custom Orders</a>
-  <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
-  <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
-</nav>
-
-  <main style="padding: 20px;">
-    
-    <h1>📬 Contact Us</h1>
-    <p>Email us at: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a></p>
-    <p>Follow us:</p>
-    <ul>
-      <li>Instagram: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a></li>
-      <li>X (Twitter): <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a></li>
-    </ul>
-    <img src="contact-image.png" alt="Contact Us Image" style="width: 100%; max-width: 800px; display: block; margin: 20px auto;">
-    
-  </main>
-  
-<footer style="text-align: center; padding: 20px; background-color: #000; color: white;">
-  Contact us: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a><br>
-  IG: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a> | 
-  X: <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a>
-</footer>
-
+<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Us - Jerk Threads</title></head>
+<body>
+<h1>Contact Us</h1>
+<p>X: <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+<p>Instagram: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
+<p>Email: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></p>
+<p><a href="index.html">Return to Home</a></p>
 </body>
 </html>
